# MetaNN-book

./: .gitignore  CMakeLists.txt  readme.md
MetaNN/: makefile
MetaNN/data/facilities/: traits.h
Test/: Makefile
